--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-r2rml/pipeline-ice/brick-data
-r2rml/pipeline-ice/knowledge-graph.nt*
+r2rml/pipeline-*/brick-data
+r2rml/pipeline-*/knowledge-graph.*
