ice: Add mappings to Chemical_Functional_Use_Categories_Data.parquet
Note that these data do not have an Assay column. This might not be
modelled correctly for now.

--- a/okg-ml.yaml
+++ b/okg-ml.yaml
@@ -13465,7 +13465,43 @@ datasets:
                 - 'Unnamed: 2'
               mapper: {}
       data-source/ice/Chemical_Functional_Use_Categories_Data.parquet:
+        _note: >-
+          No Assay in this data table. Is modelling it as a Measure_Group +
+          Endpoint useful?
         elements:
+          - _ChemicalEntity:
+              _mapper_alts:
+                Value: ~
+                ValueLabel:
+                  class: ~
+              columns:
+                - DTXSID
+              mapper:
+                Class:
+                  class: Chemical_Entity
+          - _MeasureGroup:
+              _mapper_alts:
+                Value: ~
+                ValueLabel:
+                  class: ~
+              columns:
+                - DTXSID
+              mapper:
+                Class:
+                  class: Measure_Group
+          - _Endpoint:
+              _mapper_alts:
+                Value: ~
+                ValueLabel:
+                  class: ~
+              columns:
+                - Record ID
+                - DTXSID
+                - Endpoint
+              mapper:
+                ValueLabel:
+                  class: Endpoint
+                  label_column: Endpoint
           - Data Name:
               _mapper_alts:
                 Class:
