--- a/stages/okg.ini
+++ b/stages/okg.ini
@@ -1,7 +1,7 @@
 # Configuration for Morph-KGC
 [CONFIGURATION]
 output_file: ./raw/knowledge-graph.nt
-udfs: ./stages/ice-udfs.py
+logging_level: DEBUG
 
 [DataSource1]
-mappings: ./stages/ice.rml.ttl
+mappings: ./stages/okg-ml.rml.ttl
