Add biobricks-okg-tool as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/biobricks-script-lib"]
 	path = vendor/biobricks-script-lib
 	url = https://github.com/biobricks-ai/biobricks-script-lib.git
+[submodule "vendor/biobricks-okg-tool"]
+	path = vendor/biobricks-okg-tool
+	url = https://github.com/biobricks-ai/biobricks-okg-tool.git
