Add `.nt{,.gz,.bz2,.xz}` to `.gitignore`

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ stages/*.gen.ini
 /data-processed
 
 /_jena-fuseki-run/
+
+# N-Triples are only used for DB input
+*.nt
+*.nt.gz
+*.nt.bz2
+*.nt.xz
