--- a/Makefile.docker
+++ b/Makefile.docker
@@ -13,6 +13,8 @@ DB_VIRTUOSO_PATH := ${DB_VIRTUOSO_PATH_DEFAULT}
 	docker-compose-exec-db-virtuoso-load-rdf-data  \
 	docker-compose-exec-db-virtuoso-isql-load-list #
 
+DOCKER_COMPOSE_CONFIG_FILES := docker-compose.yml docker-graph-volumes.json
+DOCKER_COMPOSE_CONFIG_ARGS  := $(foreach F,$(DOCKER_COMPOSE_CONFIG_FILES),-f $F)
 
 define DOCKER_MESSAGE
 
@@ -60,44 +62,38 @@ docker-test:
 
 docker-compose%: export DB_VIRTUOSO_PATH:=${DB_VIRTUOSO_PATH}
 
-docker-compose-up: docker-build
+docker-compose-up: docker-build $(DOCKER_COMPOSE_CONFIG_FILES)
 	[ -n "${DB_VIRTUOSO_PATH}" ] || ( echo "Must set DB_VIRTUOSO_PATH" && exit 1 )
 	[ -f "${DB_VIRTUOSO_PATH}/database/virtuoso.ini" ] || $(ECHO) -n '' > "${ROOT_DIR}/db-virtuoso/initdb.d/11-load-datasets.output.sql"
 	$(MKDIR_P) "${DB_VIRTUOSO_PATH}/database"
 	$(MKDIR_P) "${DB_VIRTUOSO_PATH}/data"
 	docker compose \
-		-f docker-compose.yml \
-		-f docker-graph-volumes.json \
+		$(DOCKER_COMPOSE_CONFIG_ARGS) \
 		up -d
 
-docker-compose-down:
+docker-compose-down: $(DOCKER_COMPOSE_CONFIG_FILES)
 	docker compose \
-		-f docker-compose.yml \
-		-f docker-graph-volumes.json \
+		$(DOCKER_COMPOSE_CONFIG_ARGS) \
 		down
 
-docker-compose-logs:
+docker-compose-logs: $(DOCKER_COMPOSE_CONFIG_FILES)
 	docker compose \
-		-f docker-compose.yml \
-		-f docker-graph-volumes.json \
+		$(DOCKER_COMPOSE_CONFIG_ARGS) \
 		logs -f
 
-docker-compose-exec-db-virtuoso:
+docker-compose-exec-db-virtuoso: $(DOCKER_COMPOSE_CONFIG_FILES)
 	docker compose \
-		-f docker-compose.yml \
-		-f docker-graph-volumes.json \
+		$(DOCKER_COMPOSE_CONFIG_ARGS) \
 		exec db-virtuoso bash
 
-docker-compose-exec-db-virtuoso-load-rdf-data:
+docker-compose-exec-db-virtuoso-load-rdf-data: $(DOCKER_COMPOSE_CONFIG_FILES)
 	docker compose \
-		-f docker-compose.yml \
-		-f docker-graph-volumes.json \
+		$(DOCKER_COMPOSE_CONFIG_ARGS) \
 		exec db-virtuoso bash -c '/script/load-rdf-dir /data > /tmp/load-rdf-dir.sql; isql "exec=LOAD /tmp/load-rdf-dir.sql"'
 
-docker-compose-exec-db-virtuoso-isql-load-list:
+docker-compose-exec-db-virtuoso-isql-load-list: $(DOCKER_COMPOSE_CONFIG_FILES)
 	docker compose \
-		-f docker-compose.yml \
-		-f docker-graph-volumes.json \
+		$(DOCKER_COMPOSE_CONFIG_ARGS) \
 		exec db-virtuoso isql 'exec=SELECT * FROM DB.DBA.load_list;'
 
 clean::
